--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -13,7 +13,7 @@ html {
 
 body {
   background-color: #000;
-  padding: 2em;
+  padding: 1.5em;
   overflow-x: hidden;
 }
 
@@ -66,24 +66,6 @@ body {
 }
 .inicio .menu_inicio .menu_nav li a:hover::after {
   width: 95%;
-}
-
-.hamburger {
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 25px;
-  height: 18px;
-  cursor: pointer;
-  z-index: 1001;
-  margin-right: 10px;
-}
-.hamburger span {
-  height: 3px;
-  width: 100%;
-  background-color: #fff;
-  border-radius: 2px;
-  transition: 0.4s ease;
 }
 
 .container_inicio {
@@ -139,7 +121,7 @@ body {
   margin-top: 30px;
 }
 .container_inicio .conteudo_inicio .redes_social .social {
-  background-color: #0f0f0f;
+  background-color: #fff;
   border-radius: 10px;
   padding: 5px;
   display: flex;
@@ -149,7 +131,7 @@ body {
 }
 .container_inicio .conteudo_inicio .redes_social .social:hover {
   transform: scale(1.1);
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.4);
   transition: 0.4s ease-in-out;
 }
 .container_inicio .conteudo_inicio .redes_social .social img {
@@ -164,12 +146,14 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
+  z-index: 888;
 }
 .container_inicio .imagem_inicio img {
   border-radius: 50%;
   width: 100%;
   max-width: 300px;
   box-shadow: 0px 0px 10px #fff;
+  z-index: 888;
 }
 
 .sobre_mim {
@@ -343,6 +327,8 @@ body {
 }
 .contatos_ img {
   width: 50px;
+  background-color: #fff;
+  padding: 5px;
 }
 .contatos_ img:hover {
   filter: drop-shadow(0px 0px 6px #fff);
@@ -390,7 +376,8 @@ footer {
   }
   .container_inicio .imagem_inicio {
     max-width: 200px;
-    width: 70%;
+    width: 65%;
+    margin-right: 50px;
   }
   .tecnologias .skills {
     justify-content: center;
@@ -433,20 +420,20 @@ footer {
   .menu_nav {
     display: none;
     position: absolute;
-    top: 110px;
-    right: 20px;
+    top: 70px;
+    right: 10px;
     background-color: #0f0f0f;
     flex-direction: column;
     gap: 1em;
-    padding: 1em;
+    padding: 5px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
     z-index: 1000;
   }
   .menu_nav ul {
-    flex-direction: column;
     gap: 1em;
     list-style: none;
+    flex-direction: column;
   }
   .menu_nav ul li a {
     padding: 10px;
