--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -88,12 +88,8 @@ body {
 .container_inicio .conteudo_inicio #titulo_inicio {
   font-size: 40px;
   font-weight: 700;
-  font-family: monospace;
-  width: 20ch;
-  height: 48px;
-  line-height: 48px;
-  display: block;
-  white-space: nowrap;
+  width: 300px;
+  height: 40px;
   overflow: hidden;
   position: relative;
 }
