--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -101,12 +101,8 @@ body {
         #titulo_inicio {
             font-size: 40px;
             font-weight: 700;
-            font-family: monospace;
-            width: 20ch;
-            height: 48px;
-            line-height: 48px;
-            display: block;
-            white-space: nowrap;
+            width: 300px;
+            height: 40px;
             overflow: hidden;
             position: relative;
         }
