--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -18,20 +18,16 @@ html {
 
 body {
     background-color: $preto;
-    padding: 1.5em;
     overflow-x: hidden;
 }
 
 .inicio {
-    padding: 0.3em;
-
     .menu_inicio {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0.5em;
+        padding: 0.7em;
         background-color: $pretoClaro;
-        border-radius: 20px;
 
         .curriculo a {
             background-color: $preto;
@@ -80,6 +76,9 @@ body {
     }
 }
 
+main{
+    padding: 2.5em;
+}
 
 .container_inicio {
     display: flex;
@@ -102,7 +101,7 @@ body {
             font-size: 40px;
             font-weight: 700;
             width: 300px;
-            height: 40px;
+            height: 55px;
             overflow: hidden;
             position: relative;
         }
@@ -193,12 +192,13 @@ body {
     width: 100%;
     gap: .5em;
     margin-top: 120px;
+    padding: 1em;
 
     article {
         background-color: $pretoClaro;
         border-radius: 5px;
         color: $branco;
-        padding: 10px;
+        padding: 1em;
 
         p {
             font-weight: 900;
@@ -229,11 +229,6 @@ body {
         gap: 2em;
         width: 100%;
         background-color: $preto;
-        margin: 0;
-
-        article {
-            width: 100%;
-        }
     }
 
     ul {
@@ -249,7 +244,6 @@ body {
             flex-wrap: wrap;
             gap: 1em;
             width: 100%;
-            padding: 1em;
 
             img {
                 background-color: $branco;
@@ -293,13 +287,13 @@ body {
 
             .progresso {
                 height: 100%;
-                width: 0; // começa do zero
+                width: 0;
                 background-color: $branco;
                 border-radius: 5px;
-                transition: width 1s ease-in-out;
+                transition: width 3s ease-in-out;
             }
 
-            // Cores individuais (opcional)
+            
             .html {
                 background-color: #f16529;
             }
