--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -13,20 +13,15 @@ html {
 
 body {
   background-color: #000;
-  padding: 1.5em;
   overflow-x: hidden;
 }
 
-.inicio {
-  padding: 0.3em;
-}
 .inicio .menu_inicio {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5em;
+  padding: 0.7em;
   background-color: #0f0f0f;
-  border-radius: 20px;
 }
 .inicio .menu_inicio .curriculo a {
   background-color: #000;
@@ -68,6 +63,10 @@ body {
   width: 95%;
 }
 
+main {
+  padding: 2.5em;
+}
+
 .container_inicio {
   display: flex;
   align-items: center;
@@ -89,7 +88,7 @@ body {
   font-size: 40px;
   font-weight: 700;
   width: 300px;
-  height: 40px;
+  height: 55px;
   overflow: hidden;
   position: relative;
 }
@@ -170,12 +169,13 @@ body {
   width: 100%;
   gap: 0.5em;
   margin-top: 120px;
+  padding: 1em;
 }
 .sobre_mim article {
   background-color: #0f0f0f;
   border-radius: 5px;
   color: #fff;
-  padding: 10px;
+  padding: 1em;
 }
 .sobre_mim article p {
   font-weight: 900;
@@ -201,10 +201,6 @@ body {
   gap: 2em;
   width: 100%;
   background-color: #000;
-  margin: 0;
-}
-.sobre_mim .educacao_2 article {
-  width: 100%;
 }
 .sobre_mim ul {
   list-style: none;
@@ -218,7 +214,6 @@ body {
   flex-wrap: wrap;
   gap: 1em;
   width: 100%;
-  padding: 1em;
 }
 .sobre_mim .tecnologias .skills img {
   background-color: #fff;
@@ -260,7 +255,7 @@ body {
   width: 0;
   background-color: #fff;
   border-radius: 5px;
-  transition: width 1s ease-in-out;
+  transition: width 3s ease-in-out;
 }
 .habilidades .skill .barra .html {
   background-color: #f16529;
