jogos icone alterado

--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -352,6 +352,13 @@ main{
                 }
             }
 
+            .games{
+                width: 150px;
+                padding: 15px;
+                border-radius: 0;
+                margin-top: -30px;
+            }
+
             small {
                 color: $branco;
                 padding: 10px;
