--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -304,6 +304,12 @@ main {
   filter: drop-shadow(0px 0px 10px #fff);
   transition: 0.5s ease-in-out;
 }
+.projetos .container_projetos ._projeto .games {
+  width: 150px;
+  padding: 15px;
+  border-radius: 0;
+  margin-top: -30px;
+}
 .projetos .container_projetos ._projeto small {
   color: #fff;
   padding: 10px;
