--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -116,7 +116,7 @@ main{
 
         .paragrafo_inicio {
             font-size: 13px;
-            text-align: center;
+            text-align: justify;
         }
 
         .botao_inicio {
