--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -13,7 +13,14 @@ html {
 
 body {
   background-color: #000;
+  background-attachment: fixed;
   overflow-x: hidden;
+}
+
+#stars {
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
 
 .inicio .menu_inicio {
@@ -24,23 +31,24 @@ body {
   background-color: #0f0f0f;
 }
 .inicio .menu_inicio .curriculo a {
-  background-color: #000;
+  background-color: #fff;
   border-radius: 10px;
-  display: block;
   padding: 10px;
-  color: #fff;
+  color: #000;
   font-weight: 700;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 0.3em;
 }
 .inicio .menu_inicio .curriculo a:hover {
-  background-color: #fff;
-  color: #000;
-  transition: 0.5s;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 .inicio .menu_inicio .menu_nav ul {
   display: flex;
   list-style: none;
   gap: 1em;
+  z-index: 1;
 }
 .inicio .menu_inicio .menu_nav li a {
   text-decoration: none;
@@ -76,6 +84,7 @@ main {
   color: #fff;
   gap: 2em;
   margin-top: 50px;
+  z-index: 20;
 }
 .container_inicio .conteudo_inicio {
   display: flex;
@@ -107,6 +116,7 @@ main {
 }
 .container_inicio .conteudo_inicio .botao_inicio {
   margin-top: 1em;
+  z-index: 1;
 }
 .container_inicio .conteudo_inicio .botao_inicio a {
   text-decoration: none;
@@ -115,11 +125,11 @@ main {
   font-weight: 700;
   color: #fff;
   box-shadow: 2px 2px 2px #0f0f0f;
+  z-index: 20;
 }
 .container_inicio .conteudo_inicio .botao_inicio a:hover {
   background-color: #fff;
   color: #000;
-  transition: 0.3s ease-in-out;
 }
 .container_inicio .conteudo_inicio .redes_social {
   display: flex;
@@ -139,7 +149,6 @@ main {
 .container_inicio .conteudo_inicio .redes_social .social:hover {
   transform: scale(1.1);
   background-color: rgba(255, 255, 255, 0.4);
-  transition: 0.4s ease-in-out;
 }
 .container_inicio .conteudo_inicio .redes_social .social img {
   width: 30px;
@@ -170,6 +179,16 @@ main {
   gap: 0.5em;
   margin-top: 120px;
   padding: 1em;
+}
+.sobre_mim a {
+  color: #000;
+  background-color: #fff;
+  font-weight: 700;
+  border-radius: 5px;
+  text-decoration: none;
+}
+.sobre_mim a:hover {
+  text-decoration: underline;
 }
 .sobre_mim article {
   background-color: #0f0f0f;
@@ -229,6 +248,7 @@ main {
   max-width: 800px;
   margin: 0 auto;
   padding: 2em;
+  z-index: 20;
 }
 .habilidades h2 {
   text-align: center;
@@ -275,11 +295,15 @@ main {
 .habilidades .skill .barra .figma {
   background-color: #a259ff;
 }
+.habilidades .skill .barra .ia {
+  background-color: #fff;
+}
 
 .projetos {
   background-color: #0f0f0f;
   border-radius: 5px;
   overflow: auto;
+  z-index: 20;
 }
 .projetos .projeto_titulo {
   color: #fff;
@@ -289,11 +313,13 @@ main {
 .projetos .container_projetos {
   display: flex;
   gap: 1em;
+  z-index: 1;
 }
 .projetos .container_projetos ._projeto {
   text-align: center;
   display: flex;
   flex-direction: column;
+  z-index: 1;
 }
 .projetos .container_projetos ._projeto img {
   width: 200px;
@@ -302,7 +328,7 @@ main {
 }
 .projetos .container_projetos ._projeto img:hover {
   filter: drop-shadow(0px 0px 10px #fff);
-  transition: 0.5s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 .projetos .container_projetos ._projeto .games {
   width: 150px;
@@ -327,6 +353,7 @@ main {
   margin-top: 60px;
   padding: 2em 1em;
   width: 100%;
+  z-index: 1;
 }
 .contatos_ .box__contato {
   display: flex;
@@ -488,7 +515,7 @@ footer {
   transition: 0.4s ease;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .hamburger {
     display: flex;
   }
