--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -4,7 +4,6 @@ $branco: #fff;
 $preto: #000;
 $pretoClaro: #0f0f0f;
 $rgbaClaro: rgb(255, 255, 255, .4);
-$vermelho: #ff0000;
 
 
 html {
@@ -20,7 +19,14 @@ html {
 
 body {
     background-color: $preto;
+    background-attachment: fixed;
     overflow-x: hidden;
+}
+
+#stars {
+    position: fixed;
+    width: 100%;
+    height: 100%;
 }
 
 .inicio {
@@ -32,18 +38,18 @@ body {
         background-color: $pretoClaro;
 
         .curriculo a {
-            background-color: $preto;
+            background-color: $branco;
             border-radius: 10px;
-            display: block;
             padding: 10px;
-            color: $branco;
+            color: $preto;
             font-weight: 700;
             text-decoration: none;
+            display: flex;
+            align-items: center;
+            gap: .3em;
 
             &:hover {
-                background-color: $branco;
-                color: $preto;
-                transition: 0.5s;
+                background-color: $rgbaClaro;
             }
         }
 
@@ -51,6 +57,7 @@ body {
             display: flex;
             list-style: none;
             gap: 1em;
+            z-index: 1;
         }
 
         .menu_nav li a {
@@ -91,6 +98,7 @@ main {
     color: $branco;
     gap: 2em;
     margin-top: 50px;
+    z-index: 20;
 
     .conteudo_inicio {
         display: flex;
@@ -123,6 +131,7 @@ main {
 
         .botao_inicio {
             margin-top: 1em;
+            z-index: 1;
 
             a {
                 text-decoration: none;
@@ -131,11 +140,11 @@ main {
                 font-weight: 700;
                 color: $branco;
                 box-shadow: 2px 2px 2px $pretoClaro;
+                z-index: 20;
 
                 &:hover {
                     background-color: $branco;
                     color: $preto;
-                    transition: 0.3s ease-in-out;
                 }
             }
         }
@@ -158,7 +167,6 @@ main {
                 &:hover {
                     transform: scale(1.1);
                     background-color: $rgbaClaro;
-                    transition: 0.4s ease-in-out;
                 }
 
                 img {
@@ -195,6 +203,18 @@ main {
     gap: .5em;
     margin-top: 120px;
     padding: 1em;
+
+    a {
+        color: $preto;
+        background-color: $branco;
+        font-weight: 700;
+        border-radius: 5px;
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 
     article {
         background-color: $pretoClaro;
@@ -264,6 +284,7 @@ main {
     max-width: 800px;
     margin: 0 auto;
     padding: 2em;
+    z-index: 20;
 
     h2 {
         text-align: center;
@@ -319,6 +340,10 @@ main {
             .figma {
                 background-color: #a259ff;
             }
+
+            .ia {
+                background-color: #fff;
+            }
         }
     }
 }
@@ -327,6 +352,7 @@ main {
     background-color: $pretoClaro;
     border-radius: 5px;
     overflow: auto;
+    z-index: 20;
 
     .projeto_titulo {
         color: $branco;
@@ -337,11 +363,13 @@ main {
     .container_projetos {
         display: flex;
         gap: 1em;
+        z-index: 1;
 
         ._projeto {
             text-align: center;
             display: flex;
             flex-direction: column;
+            z-index: 1;
 
             img {
                 width: 200px;
@@ -350,7 +378,7 @@ main {
 
                 &:hover {
                     filter: drop-shadow(0px 0px 10px $branco);
-                    transition: .5s ease-in-out;
+                    transition: .3s ease-in-out;
                 }
             }
 
@@ -381,6 +409,7 @@ main {
     margin-top: 60px;
     padding: 2em 1em;
     width: 100%;
+    z-index: 1;
 
     .box__contato {
         display: flex;
@@ -496,7 +525,6 @@ footer {
 }
 
 @media (max-width: 768px) {
-
     .container_inicio {
         flex-direction: column-reverse;
         gap: 2em;
@@ -566,8 +594,7 @@ footer {
     }
 }
 
-@media (max-width: 768px) {
-
+@media (max-width: 767px) {
     .hamburger {
         display: flex;
     }
