--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -21,7 +21,6 @@ body {
   position: fixed;
   width: 100%;
   height: 100%;
-  pointer-events: none;
 }
 
 .inicio .menu_inicio {
@@ -112,8 +111,11 @@ main {
           user-select: none;
 }
 .container_inicio .conteudo_inicio .paragrafo_inicio {
-  font-size: 13px;
+  font-size: 16px;
   text-align: justify;
+  background-color: #000;
+  padding: 1px;
+  border-radius: 5px;
 }
 .container_inicio .conteudo_inicio .botao_inicio {
   margin-top: 1em;
@@ -187,6 +189,7 @@ main {
   font-weight: 700;
   border-radius: 5px;
   text-decoration: none;
+  font-size: 15px;
 }
 .sobre_mim a:hover {
   text-decoration: underline;
