--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -125,8 +125,11 @@ main {
         }
 
         .paragrafo_inicio {
-            font-size: 13px;
+            font-size: 16px;
             text-align: justify;
+            background-color: #000;
+            padding: 1px;
+            border-radius: 5px;
         }
 
         .botao_inicio {
@@ -210,6 +213,7 @@ main {
         font-weight: 700;
         border-radius: 5px;
         text-decoration: none;
+        font-size: 15px;
 
         &:hover {
             text-decoration: underline;
