--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -27,6 +27,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100%;
+    pointer-events: none;
 }
 
 .inicio {
@@ -127,7 +128,7 @@ main {
         .paragrafo_inicio {
             font-size: 16px;
             text-align: justify;
-            background-color: #000;
+            background-color: $pretoClaro;
             padding: 1px;
             border-radius: 5px;
         }
