--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -21,6 +21,7 @@ body {
   position: fixed;
   width: 100%;
   height: 100%;
+  pointer-events: none;
 }
 
 .inicio .menu_inicio {
@@ -113,7 +114,7 @@ main {
 .container_inicio .conteudo_inicio .paragrafo_inicio {
   font-size: 16px;
   text-align: justify;
-  background-color: #000;
+  background-color: #0f0f0f;
   padding: 1px;
   border-radius: 5px;
 }
