--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -268,6 +268,7 @@ main {
   font-weight: bold;
   display: block;
   margin-bottom: 0.5em;
+  text-transform: uppercase;
 }
 .habilidades .skill .barra {
   background-color: rgba(255, 255, 255, 0.2);
@@ -280,6 +281,7 @@ main {
   width: 0;
   background-color: #fff;
   border-radius: 5px;
+  filter: drop-shadow(0px 0px 10px #fff);
   transition: width 3s ease-in-out;
 }
 .habilidades .skill .barra .html {
@@ -297,8 +299,17 @@ main {
 .habilidades .skill .barra .bootstrap {
   background-color: #563d7c;
 }
+.habilidades .skill .barra .tailwind {
+  background-color: #29ddf1;
+}
+.habilidades .skill .barra .uiverse {
+  background-color: #4f00c5;
+}
 .habilidades .skill .barra .figma {
   background-color: #a259ff;
+}
+.habilidades .skill .barra .git {
+  background-color: #0f0f0f;
 }
 .habilidades .skill .barra .ia {
   background-color: #fff;
