--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -305,6 +305,7 @@ main {
             font-weight: bold;
             display: block;
             margin-bottom: 0.5em;
+            text-transform: uppercase;
         }
 
         .barra {
@@ -318,6 +319,7 @@ main {
                 width: 0;
                 background-color: $branco;
                 border-radius: 5px;
+                filter: drop-shadow(0px 0px 10px $branco);
                 transition: width 3s ease-in-out;
             }
 
@@ -342,8 +344,20 @@ main {
                 background-color: #563d7c;
             }
 
+            .tailwind{
+                background-color: #29ddf1;
+            }
+
+            .uiverse{
+                background-color: #4f00c5;
+            }
+
             .figma {
                 background-color: #a259ff;
+            }
+
+            .git{
+                background-color: #0f0f0f;
             }
 
             .ia {
