--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -22,6 +22,7 @@ body {
   width: 100%;
   height: 100%;
   pointer-events: none;
+  animation: surgir 3s ease-in 1;
 }
 
 .inicio .menu_inicio {
@@ -115,7 +116,9 @@ main {
   font-size: 16px;
   text-align: justify;
   background-color: #0f0f0f;
-  padding: 1px;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 5px;
   border-radius: 5px;
 }
 .container_inicio .conteudo_inicio .botao_inicio {
@@ -606,4 +609,13 @@ footer {
 [data-animar].ativo {
   opacity: 1;
   transform: translate(0);
+}
+
+@keyframes surgir {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }/*# sourceMappingURL=estilo.css.map */
