--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -32,25 +32,31 @@ body {
   padding: 0.7em;
   background-color: #0f0f0f;
 }
-.inicio .menu_inicio .curriculo a {
-  background-color: #fff;
-  border-radius: 10px;
-  padding: 10px;
-  color: #000;
-  font-weight: 700;
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  gap: 0.3em;
+.inicio .menu_inicio .logo {
+  font-size: 25px;
+  color: #fff;
+  margin-left: 20px;
+  font-weight: 800;
 }
-.inicio .menu_inicio .curriculo a:hover {
-  background-color: rgba(255, 255, 255, 0.4);
+.inicio .menu_inicio .logo span {
+  color: #4dc8ff;
+}
+.inicio .menu_inicio .curriculo {
+  background-color: #4dc8ff;
+  border-radius: 5px;
+  text-shadow: 1px 1px 3px #000;
+  font-weight: 700;
+  font-size: 19px;
+  text-align: center;
 }
 .inicio .menu_inicio .menu_nav ul {
   display: flex;
   list-style: none;
   gap: 1em;
   z-index: 1;
+}
+.inicio .menu_inicio .menu_nav ul li {
+  padding: 8px;
 }
 .inicio .menu_inicio .menu_nav li a {
   text-decoration: none;
@@ -76,8 +82,7 @@ body {
 main {
   padding: 2.5em;
 }
-
-.container_inicio {
+main .container_inicio {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -88,14 +93,14 @@ main {
   margin-top: 50px;
   z-index: 20;
 }
-.container_inicio .conteudo_inicio {
+main .container_inicio .conteudo_inicio {
   display: flex;
   flex-direction: column;
   gap: 1.5em;
   flex: 1;
   max-width: 600px;
 }
-.container_inicio .conteudo_inicio #titulo_inicio {
+main .container_inicio .conteudo_inicio #titulo_inicio {
   font-size: 40px;
   font-weight: 700;
   width: 300px;
@@ -103,7 +108,7 @@ main {
   overflow: hidden;
   position: relative;
 }
-.container_inicio .conteudo_inicio .texto-oculto {
+main .container_inicio .conteudo_inicio .texto-oculto {
   visibility: hidden;
   position: absolute;
   white-space: nowrap;
@@ -112,7 +117,7 @@ main {
      -moz-user-select: none;
           user-select: none;
 }
-.container_inicio .conteudo_inicio .paragrafo_inicio {
+main .container_inicio .conteudo_inicio .paragrafo_inicio {
   font-size: 16px;
   text-align: justify;
   background-color: #0f0f0f;
@@ -121,11 +126,16 @@ main {
   padding: 5px;
   border-radius: 5px;
 }
-.container_inicio .conteudo_inicio .botao_inicio {
+main .container_inicio .conteudo_inicio .paragrafo_inicio span {
+  font-size: 18px;
+  font-weight: 700;
+  color: #4dc8ff;
+}
+main .container_inicio .conteudo_inicio .botao_inicio {
   margin-top: 1em;
   z-index: 1;
 }
-.container_inicio .conteudo_inicio .botao_inicio a {
+main .container_inicio .conteudo_inicio .botao_inicio a {
   text-decoration: none;
   background-color: #0f0f0f;
   padding: 10px;
@@ -134,60 +144,99 @@ main {
   box-shadow: 2px 2px 2px #0f0f0f;
   z-index: 20;
 }
-.container_inicio .conteudo_inicio .botao_inicio a:hover {
+main .container_inicio .conteudo_inicio .botao_inicio a:hover {
   background-color: #fff;
   color: #000;
 }
-.container_inicio .conteudo_inicio .redes_social {
+main .container_inicio .conteudo_inicio .redes_social {
   display: flex;
   gap: 1.3em;
   padding: 5px;
   margin-top: 30px;
 }
-.container_inicio .conteudo_inicio .redes_social .social {
+main .container_inicio .conteudo_inicio .redes_social .social {
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 100%;
+  width: 50px;
+  height: 50px;
   padding: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: transform 0.3s;
 }
-.container_inicio .conteudo_inicio .redes_social .social:hover {
+main .container_inicio .conteudo_inicio .redes_social .social:hover {
   transform: scale(1.1);
   background-color: rgba(255, 255, 255, 0.4);
 }
-.container_inicio .conteudo_inicio .redes_social .social img {
-  width: 30px;
-  height: 30px;
-  -o-object-fit: cover;
-     object-fit: cover;
+main .container_inicio .conteudo_inicio .redes_social .social img {
+  width: 100%;
+  display: block;
 }
-.container_inicio .imagem_inicio {
+main .container_inicio .conteudo_inicio .redes_social .social img:hover {
+  transform: translateY(-10px);
+  transition: 0.4s;
+}
+main .container_inicio .imagem_inicio {
   flex: 1;
   max-width: 300px;
   width: 100%;
   display: flex;
   justify-content: center;
 }
-.container_inicio .imagem_inicio img {
+main .container_inicio .imagem_inicio img {
   border-radius: 50%;
   width: 100%;
   max-width: 300px;
-  box-shadow: 0px 0px 10px #fff;
+  box-shadow: 0px 0px 10px #4dc8ff;
+  display: block;
+  animation: flutuar 3s ease-in-out infinite;
 }
-
-.sobre_mim {
+main .container_inicio .imagem_inicio .saudacao {
+  background-color: #4dc8ff;
+  border-radius: 100%;
+  position: absolute;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  font-size: 40px;
+  padding: 5px;
+  bottom: 0;
+  right: 0;
+  display: block;
+}
+main .container_inicio .imagem_inicio .saudacao:hover {
+  animation: thau 1s ease-in-out;
+}
+main .sobre_mim {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
-  gap: 0.5em;
+  gap: 1.5em;
   margin-top: 120px;
   padding: 1em;
 }
-.sobre_mim a {
+main .sobre_mim h3 {
+  font-size: 30px;
+  text-align: center;
+  position: relative;
+  padding-bottom: 15px;
+  margin-bottom: 20px;
+}
+main .sobre_mim h3::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60px;
+  height: 2px;
+  background-color: #4dc8ff;
+}
+main .sobre_mim a {
   color: #000;
   background-color: #fff;
   font-weight: 700;
@@ -195,54 +244,58 @@ main {
   text-decoration: none;
   font-size: 15px;
 }
-.sobre_mim a:hover {
+main .sobre_mim a:hover {
   text-decoration: underline;
 }
-.sobre_mim article {
+main .sobre_mim article {
   background-color: #0f0f0f;
   border-radius: 5px;
   color: #fff;
   padding: 1em;
 }
-.sobre_mim article p {
+main .sobre_mim article p {
   font-weight: 900;
-  padding: 5px;
-}
-.sobre_mim article p,
-.sobre_mim article li {
-  font-size: 13px;
-}
-.sobre_mim article img {
-  width: 50px;
-}
-.sobre_mim .educacao_1 {
-  width: -moz-fit-content;
-  width: fit-content;
-}
-.sobre_mim .educacao_1 h3 {
   padding: 10px;
 }
-.sobre_mim .educacao_2 {
+main .sobre_mim article li {
+  font-size: 13px;
+  padding: 10px;
+}
+main .sobre_mim article img {
+  width: 50px;
+}
+main .sobre_mim .educacao_1 {
+  width: 100%;
+}
+main .sobre_mim .educacao_1 h3 {
+  padding: 10px;
+}
+main .sobre_mim .educacao_2 {
   display: flex;
-  flex-direction: column;
-  gap: 2em;
+  justify-content: space-around;
   width: 100%;
   background-color: #000;
+  flex-wrap: wrap;
+  gap: 2em;
 }
-.sobre_mim ul {
+main .sobre_mim .educacao_2 .educacao_box {
+  width: 450px;
+  animation: flutuar 3s ease-in-out infinite;
+}
+main .sobre_mim ul {
   list-style: none;
 }
-.sobre_mim .tecnologias {
+main .sobre_mim .tecnologias {
   width: 100%;
 }
-.sobre_mim .tecnologias .skills {
+main .sobre_mim .tecnologias .skills {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   gap: 1em;
   width: 100%;
 }
-.sobre_mim .tecnologias .skills img {
+main .sobre_mim .tecnologias .skills img {
   background-color: #fff;
   padding: 5px;
   border-radius: 5px;
@@ -250,36 +303,35 @@ main {
   height: auto;
   flex: 1 1 60px;
 }
-
-.habilidades {
+main .habilidades {
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
   padding: 2em;
   z-index: 20;
 }
-.habilidades h2 {
+main .habilidades h2 {
   text-align: center;
   color: #fff;
   margin-bottom: 1.5em;
 }
-.habilidades .skill {
+main .habilidades .skill {
   margin-bottom: 1em;
 }
-.habilidades .skill span {
+main .habilidades .skill span {
   color: #fff;
   font-weight: bold;
   display: block;
   margin-bottom: 0.5em;
   text-transform: uppercase;
 }
-.habilidades .skill .barra {
+main .habilidades .skill .barra {
   background-color: rgba(255, 255, 255, 0.2);
   height: 10px;
   border-radius: 5px;
   overflow: hidden;
 }
-.habilidades .skill .barra .progresso {
+main .habilidades .skill .barra .progresso {
   height: 100%;
   width: 0;
   background-color: #fff;
@@ -287,86 +339,121 @@ main {
   filter: drop-shadow(0px 0px 10px #fff);
   transition: width 3s ease-in-out;
 }
-.habilidades .skill .barra .html {
+main .habilidades .skill .barra .html {
   background-color: #f16529;
 }
-.habilidades .skill .barra .css {
+main .habilidades .skill .barra .css {
   background-color: #2965f1;
 }
-.habilidades .skill .barra .javascript {
+main .habilidades .skill .barra .javascript {
   background-color: #f0db4f;
 }
-.habilidades .skill .barra .sass {
+main .habilidades .skill .barra .sass {
   background-color: #cf649a;
 }
-.habilidades .skill .barra .bootstrap {
+main .habilidades .skill .barra .bootstrap {
   background-color: #563d7c;
 }
-.habilidades .skill .barra .tailwind {
+main .habilidades .skill .barra .tailwind {
   background-color: #29ddf1;
 }
-.habilidades .skill .barra .uiverse {
+main .habilidades .skill .barra .uiverse {
   background-color: #4f00c5;
 }
-.habilidades .skill .barra .figma {
+main .habilidades .skill .barra .figma {
   background-color: #a259ff;
 }
-.habilidades .skill .barra .git {
+main .habilidades .skill .barra .git {
   background-color: #0f0f0f;
 }
-.habilidades .skill .barra .ia {
+main .habilidades .skill .barra .ia {
   background-color: #fff;
 }
-
-.projetos {
-  background-color: #0f0f0f;
+main .projetos {
+  background-color: transparent;
   border-radius: 5px;
+  margin: 50px auto;
   overflow: auto;
   z-index: 20;
+  width: 70%;
+  height: 300px;
 }
-.projetos .projeto_titulo {
+main .projetos .projeto_titulo {
   color: #fff;
   font-weight: 700;
   padding: 10px;
 }
-.projetos .container_projetos {
+main .projetos .container_projetos {
   display: flex;
   gap: 1em;
   z-index: 1;
 }
-.projetos .container_projetos ._projeto {
+main .projetos .container_projetos ._projeto {
   text-align: center;
   display: flex;
   flex-direction: column;
   z-index: 1;
 }
-.projetos .container_projetos ._projeto img {
-  width: 200px;
+main .projetos .container_projetos ._projeto img {
+  width: 250px;
   padding: 10px;
   border-radius: 10px;
 }
-.projetos .container_projetos ._projeto img:hover {
+main .projetos .container_projetos ._projeto img:hover {
   filter: drop-shadow(0px 0px 10px #fff);
   transition: 0.3s ease-in-out;
 }
-.projetos .container_projetos ._projeto .games {
+main .projetos .container_projetos ._projeto .games {
   width: 150px;
   padding: 15px;
   border-radius: 0;
   margin-top: -30px;
 }
-.projetos .container_projetos ._projeto small {
+main .projetos .container_projetos ._projeto small {
   color: #fff;
   padding: 10px;
+  font-size: 20px;
   font-weight: 700;
 }
-
-.contatos_ {
+main .metricas {
+  display: flex;
+  justify-content: center;
+  gap: 3em;
+  padding: 40px 0;
+  background-color: #000;
+}
+main .metricas .metrica {
+  text-align: center;
+  font-size: 24px;
+  color: #fff;
+  font-weight: bold;
+}
+main .metricas .metrica .numero {
+  font-size: 48px;
+  color: #4dc8ff;
+}
+main .metricas .metrica .mais {
+  font-size: 32px;
+  color: #4dc8ff;
+  vertical-align: top;
+}
+main .metricas .metrica p {
+  margin-top: 8px;
+  font-size: 18px;
+  color: #fff;
+}
+main .metricas .metrica:nth-child(1) {
+  animation-delay: 0.3s;
+}
+main .metricas .metrica:nth-child(2) {
+  animation-delay: 0.6s;
+}
+main .contatos_ {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 2em;
-  background-color: #0f0f0f;
+  background-color: transparent;
   color: #fff;
   font-weight: 700;
   margin-top: 60px;
@@ -374,44 +461,45 @@ main {
   width: 100%;
   z-index: 1;
 }
-.contatos_ .box__contato {
+main .contatos_ .box__contato {
   display: flex;
   flex-wrap: wrap;
   gap: 1em;
   justify-content: center;
 }
-.contatos_ .box__contato .fale_comigo {
+main .contatos_ .box__contato .fale_comigo {
   display: flex;
 }
-.contatos_ .box__contato .fale_comigo img {
+main .contatos_ .box__contato .fale_comigo img {
   width: 50px;
   background-color: #fff;
   padding: 5px;
   border-radius: 10px;
   transition: 0.4s ease-in-out;
 }
-.contatos_ .box__contato .fale_comigo img:hover {
+main .contatos_ .box__contato .fale_comigo img:hover {
   filter: drop-shadow(0px 0px 6px #fff);
-  transform: translateY(-4px);
+  transform: translateY(6px);
 }
-.contatos_ .formulario_contato {
+main .contatos_ .formulario_contato {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   width: 100%;
   max-width: 400px;
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: #000;
   padding: 2rem;
+  border: 2px solid #fff;
   border-radius: 10px;
 }
-.contatos_ .formulario_contato h2 {
+main .contatos_ .formulario_contato h2 {
   font-size: 1.5rem;
   margin-bottom: 1rem;
   color: #fff;
   text-align: center;
 }
-.contatos_ .formulario_contato input,
-.contatos_ .formulario_contato textarea {
+main .contatos_ .formulario_contato input,
+main .contatos_ .formulario_contato textarea {
   padding: 0.8rem;
   border: none;
   border-radius: 5px;
@@ -421,22 +509,22 @@ main {
   color: #0f0f0f;
   font-weight: 500;
 }
-.contatos_ .formulario_contato textarea {
+main .contatos_ .formulario_contato textarea {
   min-height: 120px;
 }
-.contatos_ .formulario_contato button {
+main .contatos_ .formulario_contato button {
   padding: 0.8rem;
   border: none;
   border-radius: 5px;
-  background-color: #0f0f0f;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   font-weight: bold;
   cursor: pointer;
-  transition: background 0.3s;
 }
-.contatos_ .formulario_contato button:hover {
-  background-color: #e6e6e6;
-  color: #000;
+main .contatos_ .formulario_contato button:hover {
+  background-color: #0f0f0f;
+  color: #fff;
+  transition: 0.3s;
 }
 
 .mensagem-sucesso {
@@ -455,23 +543,13 @@ main {
   display: block;
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
 footer {
   text-align: center;
   color: #fff;
   font-weight: 700;
   width: 100%;
   padding: 10px;
-  background-color: #0f0f0f;
+  background-color: #000;
   margin-top: 30px;
 }
 
@@ -516,38 +594,42 @@ footer {
     flex-direction: column;
     justify-content: center;
   }
-}
-.hamburger {
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 25px;
-  height: 18px;
-  cursor: pointer;
-  z-index: 1001;
-}
-.hamburger span {
-  height: 3px;
-  width: 100%;
-  background-color: #fff;
-  border-radius: 2px;
-  transition: 0.4s ease;
-}
-
-@media (max-width: 767px) {
   .hamburger {
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 25px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 6001;
+    margin-right: 30px;
+  }
+  .hamburger span {
+    height: 3px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 2px;
+    transition: 0.4s ease;
+  }
+  .hamburger.active span:nth-child(1) {
+    transform: rotate(45deg) translateY(8px);
+  }
+  .hamburger.active span:nth-child(2) {
+    opacity: 0;
+  }
+  .hamburger.active span:nth-child(3) {
+    transform: rotate(-45deg) translateY(-8px);
   }
   .menu_inicio {
     width: 100%;
   }
   .menu_nav {
     display: none;
+    width: 100%;
     position: absolute;
-    top: 70px;
-    right: 10px;
-    background-color: #0f0f0f;
-    flex-direction: column;
+    top: 0px;
+    left: 10px;
+    background-color: #000;
     gap: 1em;
     padding: 5px;
     border-radius: 10px;
@@ -572,15 +654,7 @@ footer {
   }
   .menu_nav.active {
     display: flex;
-  }
-  .hamburger.active span:nth-child(1) {
-    transform: rotate(45deg) translateY(8px);
-  }
-  .hamburger.active span:nth-child(2) {
-    opacity: 0;
-  }
-  .hamburger.active span:nth-child(3) {
-    transform: rotate(-45deg) translateY(-8px);
+    transition: 0.5s ease-in;
   }
 }
 /*ANIMAÇAO*/
@@ -611,11 +685,52 @@ footer {
   transform: translate(0);
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 @keyframes surgir {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
+  }
+}
+@keyframes flutuar {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@keyframes thau {
+  0% {
+    transform: rotate(0deg);
+  }
+  20% {
+    transform: rotate(20deg);
+  }
+  40% {
+    transform: rotate(-15deg);
+  }
+  60% {
+    transform: rotate(10deg);
+  }
+  80% {
+    transform: rotate(-10deg);
+  }
+  100% {
+    transform: rotate(0deg);
   }
 }/*# sourceMappingURL=estilo.css.map */
