--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -552,6 +552,20 @@ footer {
   background-color: #000;
   margin-top: 30px;
 }
+footer .letra {
+  display: inline-block;
+  opacity: 0;
+  transform: translateY(-30px);
+  animation: cair 0.6s forwards;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+@keyframes cair {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 @media (max-width: 768px) {
   .container_inicio {
