--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -646,6 +646,22 @@ footer {
     padding: 10px;
     background-color: $preto;
     margin-top: 30px;
+
+    .letra {
+        display: inline-block;
+        opacity: 0;
+        transform: translateY(-30px);
+        animation: cair 0.6s forwards;
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    @keyframes cair {
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
 }
 
 //RESPANSIVIDADE
